--- a/pong.css
+++ b/pong.css
@@ -1,17 +1,48 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body, html, #outer-container {
+  height: 100%;
+}
+
 body {
-	text-align: center;
-	font-family: sans-serif;
-	font-size: 15px;
 	-moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: black;
 }
 
-canvas {
-	margin-top: 80px;
-  border: 2px solid white;
-  border-radius: 1px;
-  background: transparent;
+#outer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#pong-container {
+  border-radius: 35px;
+  background-color: #111;
+  display: grid;
+  grid-template-columns: 1em 24em 1em;
+  grid-template-rows: 1em 12em 1em 5em 1em;
+  box-shadow: inset 0 -8px 20px 0 #000, inset -3px 5px 5px 0 #88888888, inset 3px 5px 5px 0 #88888888, 0 2px 2px #000
+}
+
+#pong-canvas {
+  width: 24em;
+  border-radius: 25px;
+  background: #111;
+  grid-area: 2 / 2 / 3 / 3;
+  box-shadow: inset 0 0 4px 0 #FFF, 0 1px 5px 1px #FFF;
+}
+
+#stats-container {
+  grid-area: 4 / 2 / 5 / 3;
+  color: white;
+}
+
+span {
+  border: 1px solid white;
 }
