--- a/pong.css
+++ b/pong.css
@@ -4,8 +4,12 @@ body, html {
   padding: 0;
 }
 
-body, html, #outer-container {
-  height: 100%;
+#nav-placeholder {
+  width: 30em;
+  margin: 0 auto;
+}
+#nav-placeholder object {
+  width: 30em;
 }
 
 body {
@@ -16,6 +20,7 @@ body {
 }
 
 #outer-container {
+  margin-top: 3em;
   display: flex;
   justify-content: center;
   align-items: center;
